# Forkway

0109Forkway/: Dockerfile  crud.py  database.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml
0109Forkway/models/: customer.py  order.py  trade_point.py  visit.py  worker.py
0109Forkway/routers/: customer_router.py  order_router.py  trade_point_router.py  visit_router.py  worker_router.py
0109Forkway/schemas/: __init__.py  customer_schema.py  order_schema.py  trade_point_schema.py  visit_schema.py  worker_schema.py
0109Forkway/scripts/: generate_data.py
0109Forkway/tests/: test_api.py
